fixed no inspiration view not showing

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -234,7 +234,7 @@ input {
 .insp-mele-text {
   border: 1px solid black;
   border-radius: 3px;
-  padding: 10px 10px 0 10px;
+  padding: 12px 10px 0 10px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
